tests/NormalTests/paczka1/fuzzy1/92705373.err
Error in line 6: YyHb S719 91,2
Error in line 15: eIBggRI A634 71,3
Error in line 21: nM8iL5Qf6zo S941 11,5
Error in line 14: YyHb S941 31,1
Error in line 30: 45SBOdu S941 31,3
